style.css
:root.light {
    --main-bg-color: #fafafa;
    --main-text-color: #1f2f44;
    --faded-content-color: #668388;
    --normal-btn-color: #c1efff;
    --normal-btn-color-hover: #b4e4f5;
    --normal-btn-color-active: #b1dfef;
    --number-btn-color: #e4e8f3;
    --number-btn-color-hover: #d6dae7;
    --number-btn-color-active: #d4d8e3;
    --equal-btn-color: #004499;
    --equal-btn-color-hover: #003388;
    --equal-btn-color-active: #002277;
}
:root.dark {
    --main-bg-color: #121212;
    --main-text-color: #cff7ff;
    --faded-content-color: #466368;
    --normal-btn-color: #012f4f;
    --normal-btn-color-hover: #113f5f;
    --normal-btn-color-active: #214f6f;
    --number-btn-color: #33383f;
    --number-btn-color-hover: #43484f;
    --number-btn-color-active: #53585f;
    --equal-btn-color: #33afff;
    --equal-btn-color-hover: #53cfff;
    --equal-btn-color-active: #73efff;
}

@font-face {
    font-family: "JetBrains Mono";
    src: url(./fonts/jetbrains-mono_5.0.18/jetbrains-mono-latin-600-normal.woff2);
}
@font-face {
    font-family: "Exo 2";
    src: url(./fonts/exo-2_5.0.16/exo-2-latin-600-normal.woff2);
}

*, *::before, *::after {
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;
    font-family: inherit;
    font-weight: 600;
    color: var(--main-text-color);
}
html {
    font-family: "Exo 2", sans-serif;
}

body,
button,
div {
    transition-property: background-color, color;
    transition-duration: 400ms;
}

body {
    background-color: var(--main-bg-color);
    height: 100svh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator {
    border: 2px solid var(--faded-content-color);
    border-radius: 40px;
    padding: 20px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    position: fixed;
    width: 90vw;
    max-width: 470px;
}

.title {
    text-align: center;
    font-size: 24px;
}

#theme-toggle-btn {
    position: absolute;
    right: 32px;
    top: 24px;
}
#theme-toggle-btn svg {
    width: 24px;
    height: 24px;
    position: absolute;
    right: 100%;
}
:root.light .sun,
:root.dark .moon {
    opacity: 0;
    transform: rotate(-360deg);
}
.sun, .moon {
    transform-origin: -12px 12px;
    transition: opacity 400ms, transform 400ms;
}

.display {
    font-family: "JetBrains Mono", monospace;
    text-align: right;
    padding: 20px;
    border-radius: 20px;
}
.upper,
.lower {
    overflow: auto;
}
.upper {
    color: var(--faded-content-color);
    font-size: 28px;
    line-height: 40px;
    height: 40px;
}
.lower {
    font-size: 40px;
    line-height: 70px;
    height: 70px;
}

.buttons button {
    background-color: var(--normal-btn-color);
    font-size: 28px;
    border-radius: 20px;
    aspect-ratio: 1;
}
.buttons button:hover {
    background-color: var(--normal-btn-color-hover);
}
.buttons button.active,
.buttons button:active {
    background-color: var(--normal-btn-color-active);
}

.buttons {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(5, 1fr);
    gap: 10px;
}

button[id="="] {
    background-color: var(--equal-btn-color);
    color: var(--main-bg-color);
}
button[id="="]:hover {
    background-color: var(--equal-btn-color-hover);
}
button[id="="].active,
button[id="="]:active {
    background-color: var(--equal-btn-color-active);
}

.buttons .top {
    display: grid;
    grid-template-columns: subgrid;
    grid-column: 1 / 4;
    grid-row: 1 / 2;
}

.buttons .main > button {
    background-color: var(--number-btn-color);
}
.buttons .main > button:hover {
    background-color: var(--number-btn-color-hover);
}
.buttons .main > button.active,
.buttons .main > button:active {
    background-color: var(--number-btn-color-active);
}

.buttons .main {
    display: grid;
    grid-template-columns: subgrid;
    grid-column: 1 / 4;
    grid-template-rows: subgrid;
    grid-row: 2 / -1;
    direction: rtl;
}

.buttons .right {
    display: grid;
    grid-template-columns: subgrid;
    grid-column: -2 / -1;
    grid-template-rows: subgrid;
    grid-row: 1 / -1;
}

.buttons button.active,
.buttons button:active {
    transition-property: background-color, transform;
    transition-duration: 100ms;
    transition-function: ease-out;
    transform: scale(0.92);
}

